Fix spacing between tags.

--- a/hunchworks/static/css/includes/tags.scss
+++ b/hunchworks/static/css/includes/tags.scss
@@ -1,6 +1,7 @@
 @import "../hunchworks.scss";
 
 ul.tags {
+  margin-top: -0.5em;
 
   > li {
     display: inline-block;
@@ -13,6 +14,7 @@ ul.tags {
     padding-left: 19px;
     padding-right: 0.625em;
     margin-right: 0.625em;
+    margin-top: 0.625em;
 
     > a {
       text-decoration: none;
