--- a/hunchworks/static/css/pages/hunches.scss
+++ b/hunchworks/static/css/pages/hunches.scss
@@ -132,7 +132,7 @@
     }
 
     > ul.tags {
-      margin-top: $spacing;
+      margin-top: $spacing/2;
     }
   }
 
